@@ -272,6 +272,7 @@ Arkadiusz Miskiewicz
 David Mohr
 Andrew Molloy
 Michael Monreal
+Laurent Montaron
 Marco Monteiro
 Benjamin Moody
 John Moody
